creo que termine

--- a/index.html
+++ b/index.html
@@ -6,5 +6,70 @@
     <title>examen</title>
     <link rel="stylesheet" href="./estilos/estilos.css" />
   </head>
-  <body></body>
+  <body>
+    <header><h1>MI PORTAFOLIO</h1></header>
+    <h2>introduccion</h2>
+    <p class="presentacion">
+      buenas noches mi ombre es: Ginno Diaz Ortiz tengo las habilidades de
+      aprender rapido, no rendirme facilmente y en cuanto a experiencia estudie
+      la carrera de diseño grafico en sise hasta el segundo ciclo
+    </p>
+    <div class="caracteres">
+      <ul class="li_caracter">
+        <li>Ofrecer el servicio de creacion de logos profesionales</li>
+        <li>Edicio de video de alto detalle</li>
+        <li>Creacion de ilustraciones hd</li>
+        <li>Implementacion de efectos especiales</li>
+      </ul>
+    </div>
+
+    <h2>PROYECTOS PASADOS</h2>
+    <section class="img-container">
+      <li>
+        <figure>
+          <img src="./RECURSOS/Captura de pantalla (11).png" alt="" />
+          <figcaption></figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./RECURSOS/Captura de pantalla (68).png" alt="" />
+          <figcaption></figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="./RECURSOS/Captura de pantalla (70).png" alt="" />
+          <figcaption></figcaption>
+        </figure>
+      </li>
+    </section>
+    <footer>
+      <h3>CONTACTOS</h3>
+      <ul>
+        <li>
+          <h5>twitter</h5>
+          <a href="https://x.com/leomessisite?lang=es" target="_blank"
+            >diazginno13@gmail.com</a
+          >
+        </li>
+        <li>
+          <h5>facebook</h5>
+          <a
+            href="https://www.facebook.com/GinnoDiaz0003/?locale=es_LA"
+            target="_blank"
+            >alumnosiseginno</a
+          >
+        </li>
+        <li>
+          <h5>instagram</h5>
+          <a
+            href="https://www.instagram.com/instituto.sise/?hl=es"
+            target="_blank"
+            >sisealumnodiaz</a
+          >
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
